Added theming section. Also updated release notes.

--- a/composer-manual/publish_settings.json
+++ b/composer-manual/publish_settings.json
@@ -3,7 +3,6 @@
   "params": {
     "include_toc": true,
     "include_references": true,
-    "enable_section_numbering": true,
-    "include_source_file": true
+    "enable_section_numbering": true
   }
 }
